<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.melis.myapplication.projectDetailsAndAssignment"
    android:background="@color/backgroundColor">




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/whiteColor"
            android:text="@string/project_info_name"
            android:textSize="20sp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/whiteColor"
            android:text="@string/project_info_start_date"
            android:textSize="20sp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/whiteColor"
            android:text="@string/project_info_end_date"
            android:textSize="20sp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/whiteColor"
            android:text="Responsible Person: "
            android:textSize="20sp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="210dp"
        android:layout_marginTop="30dp"
        >

        <TextView
            android:id="@+id/projectNameAdmin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/whiteColor"
            android:textSize="20sp"
            />
        <TextView
            android:id="@+id/projectStartDateAdmin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/whiteColor"
            android:textSize="20sp"
            />
        <TextView
            android:id="@+id/projectEndDateAdmin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/whiteColor"
            android:textSize="20sp"
            />
        <TextView
            android:id="@+id/projectResponsibleAdmin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/whiteColor"
            android:textSize="20sp"
            />

    </LinearLayout>


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="200dp"
            android:layout_marginRight="50dp">

            <Button
                android:id="@+id/changeResponsibleButton"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/rounded_editbutton"
                android:text="Change responsible"/>

            <Button
                android:id="@+id/delayProjectButton"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/rounded_editbutton"
                android:text="Delay project" />


        </LinearLayout>





</FrameLayout>
