<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.melis.myapplication.ProjectDetails"
    android:id="@+id/projectDetails"
    android:background="@color/backgroundColor">


    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/refreshProgress"
        android:layout_height="match_parent"
        android:layout_width="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/projectDetailProjectIdLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="5dp"
                    android:fontFamily="sans-serif-smallcaps"
                    android:text="@string/project_info_id"
                    android:textColor="@color/whiteColor"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/projectDetailProjectNameLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="sans-serif-smallcaps"
                    android:text="@string/project_info_name"
                    android:textColor="@color/whiteColor"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/projectDetailProjectStartDateLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="sans-serif-smallcaps"
                    android:text="@string/project_info_start_date"
                    android:textColor="@color/whiteColor"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/projectDetailProjectEndDateLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="sans-serif-smallcaps"
                    android:text="@string/project_info_end_date"
                    android:textColor="@color/whiteColor"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/totalProjectHour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="sans-serif-smallcaps"
                    android:text="@string/projecthour"
                    android:textColor="@color/whiteColor"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/DoneProjectHour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="sans-serif-smallcaps"
                    android:text="@string/enteredhour"
                    android:textColor="@color/whiteColor"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/remainingHourLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="sans-serif-smallcaps"
                    android:text="Remaning hours:"
                    android:textColor="@color/whiteColor"
                    android:textSize="20sp" />


                <TextView
                    android:id="@+id/progressBarLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="sans-serif-smallcaps"
                    android:text="@string/project_progressbar"
                    android:textColor="@color/whiteColor"
                    android:textSize="20sp" />



            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/projectDetailProjectId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/whiteColor"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/projectDetailProjectName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/whiteColor"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/projectDetailProjectStartDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/whiteColor"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/projectDetailProjectEndDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:textColor="@color/whiteColor"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/totalProjectDetailHour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:textColor="@color/whiteColor"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/enteredProjectDetailHour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:textColor="@color/whiteColor"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/remainingHours"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:textColor="@color/whiteColor"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:orientation="horizontal">

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ProgressBar
                android:id="@+id/progressBarProjectDetails"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="200dp"
                android:layout_height="20dp"
                android:layout_marginLeft="20dp"
                android:background="@drawable/custom_progressbar" />

            <TextView
                android:id="@+id/projectPercentageDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:textColor="@color/whiteColor"
                android:textSize="20dp"
                />

        </LinearLayout>



    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="0dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Enter hours for this project"
            android:layout_marginTop="65dp"
            android:textColor="@color/whiteColor"
            android:layout_marginLeft="65dp"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/editTextHours"
            android:layout_width="250dp"
            android:layout_height="30dp"
            android:background="@drawable/rounded_edittext"
            android:layout_marginTop="90dp"
            android:layout_marginLeft="60dp"/>

        <Button
            android:id="@+id/hourButton"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="140dp"
            android:text="Submit"
            android:background="@drawable/rounded_editbutton"
            android:layout_marginLeft="140dp"/>

    </FrameLayout>
    </LinearLayout>
    </android.support.v4.widget.SwipeRefreshLayout>
</FrameLayout>
